[gd_scene load_steps=5 format=3 uid="uid://csfc7y0slwx52"]

[ext_resource type="Script" uid="uid://b6ctcawyxsp40" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bgnu81fgby0il" path="res://icon.svg" id="2_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(142, 142)

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 1000.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_g2els")
SPEED = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dqkch")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qhqgy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.34, 1.34)

[node name="BloodTimer" type="Timer" parent="."]
one_shot = true

[node name="BloodDetectionArea" type="Area2D" parent="." groups=["blood detection"]]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodDetectionArea"]
shape = SubResource("CircleShape2D_g2els")

[connection signal="timeout" from="BloodTimer" to="." method="_on_blood_timer_timeout"]
[connection signal="area_entered" from="BloodDetectionArea" to="." method="_on_blood_detection_area_area_entered"]
[connection signal="area_exited" from="BloodDetectionArea" to="." method="_on_blood_detection_area_area_exited"]
